deploy/spark-k8s/kubernetes/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
spec:
  type: ClusterIP  # or NodePort, LoadBalancer
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
  selector:
    component: spark-master
  # externalTrafficPolicy: Local  # Uncomment if using NodePort or LoadBalancer
  # healthCheckNodePort: 30001    # Uncomment and set an appropriate NodePort for health checks
